@@ -1,2 +1,0 @@
-""" compatibility modules (taken from 2.4.4) """
-
