@@ -23,3 +23,4 @@ commands=
 
 [pytest]
 rsyncdirs = conftest.py py doc testing
+addopts = -rxXf
